--- a/about-us.html
+++ b/about-us.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>About us</title>
     <link rel="stylesheet" href="resources/styles/style.css" />
   </head>
@@ -19,6 +27,11 @@
                 alt="Circle Agency Logo"
               />
             </a>
+          </div>
+
+          <div class="icon-container">
+            <i class="fa-solid fa-bars" id="btnHamburger"></i>
+            <i class="fa-solid fa-xmark" id="btnCross"></i>
           </div>
 
           <div class="menu">
@@ -44,11 +57,17 @@
           <div class="about-persons-container">
             <div id="profile1" class="about-person">
               <h2>John Doe</h2>
-              <img src="./resources/images/about/profile1.jpg" alt="Profile 1">
+              <img
+                src="./resources/images/about/profile1.jpg"
+                alt="Profile 1"
+              />
             </div>
             <div id="profile2" class="about-person">
               <h2>Olivia Doe</h2>
-              <img src="./resources/images/about/profile2.jpg" alt="Profile 1">
+              <img
+                src="./resources/images/about/profile2.jpg"
+                alt="Profile 1"
+              />
             </div>
           </div>
         </div>
@@ -57,16 +76,14 @@
       <section id="favorite-songs">
         <div class="container">
           <h2 class="title-about">Our favorite songs!</h2>
-          <div class="videos-container">
-          </div>
+          <div class="videos-container"></div>
         </div>
       </section>
 
       <section id="podcast">
         <div class="container">
           <h2 class="title-about">The best podcast we can show you</h2>
-          <div class="podcast-frame">
-          </div>
+          <div class="podcast-frame"></div>
         </div>
       </section>
     </main>
