--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 We design and develop astonishing websites and mobile apps.
               </p>
               <div class="hero-container-button">
-                <a href="#" class="contact-btn">Get in touch</a>
-                <a href="#" class="work-btn">See our work</a>
+                <a href="./contact-us.html" class="contact-btn">Get in touch</a>
+                <a href="#projects" class="work-btn">See our work</a>
               </div>
             </div>
 
@@ -266,7 +266,50 @@
           <h2 class="section-title">Our Services</h2>
 
           <div class="services-container">
-            <!-- Generated with JS -->
+            <div class="service">
+              <div class="img-container">
+                <img
+                  src="resources/images/services-section/icons/1.svg"
+                  alt="service1 logo"
+                />
+              </div>
+              <h3>User Interface Design</h3>
+              <p>
+                Circle provides you with a stunning user interface design that
+                is accessible to everyone.
+              </p>
+              <a href="#">Learn More</a>
+            </div>
+
+            <div class="service">
+              <div class="img-container">
+                <img
+                  src="resources/images/services-section/icons/2.svg"
+                  alt="service2 logo"
+                />
+              </div>
+              <h3>User Experience Design</h3>
+              <p>
+                Circle always focuses on delivering the best user experience to
+                your customers.
+              </p>
+              <a href="#">Learn More</a>
+            </div>
+
+            <div class="service">
+              <div class="img-container">
+                <img
+                  src="resources/images/services-section/icons/3.svg"
+                  alt="service3 logo"
+                />
+              </div>
+              <h3>Application Development</h3>
+              <p>
+                We develop high-quality mobile and web applications using the
+                latest technology stack.s
+              </p>
+              <a href="#">Learn More</a>
+            </div>
           </div>
         </div>
       </section>
