--- a/project.html
+++ b/project.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Circle Agency</title>
     <link rel="stylesheet" href="resources/styles/style.css" />
   </head>
@@ -21,18 +29,22 @@
             </a>
           </div>
 
+          <div class="icon-container">
+            <i class="fa-solid fa-bars" id="btnHamburger"></i>
+            <i class="fa-solid fa-xmark" id="btnCross"></i>
+          </div>
+
           <div class="menu">
             <ul>
-              <li><a href="/proyecto1/">Home</a></li>
-              <li><a href="./project.html">Project Page-Simple</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="#projects">Projects</a></li>
               <li><a href="#services">Services</a></li>
-              <li><a href="./contact-us.html">About</a></li>
+              <li><a href="./about-us.html">About</a></li>
             </ul>
           </div>
 
           <div class="contact">
-            <a href="#" class="contact-btn">Contact Us</a>
+            <a href="./contact-us.html" class="contact-btn">Contact Us</a>
           </div>
         </nav>
       </div>
@@ -41,48 +53,7 @@
     <main>
       <section id="projects">
         <div class="container-main-project">
-          <!-- <div class="main-project">
-            <div class="title">
-              <h1>Simplifyy</h1>
-            </div>
-            <div class="title-footer">
-              <h2>UI Design & App Development</h2>
-              <h3>Completed on 2/2/22</h3>
-            </div>
-            <div class="image-project">
-              <img
-                src="resources/images/projects-section/1.jpg"
-                alt="Project Image"
-              />
-            </div>
-
-            <div class="text-project">
-              <p>
-                Simplify is lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Sed feugiat faucibus sem, id vulputate justo ornare non.
-                Nullam et vehicula sem. Pellentesque bibendum massa non nisl
-                posuere cursus. Aliquam ac eros pretium neque consequat
-                facilisis. Ut sit amet justo varius ex ultrices fringilla. Sed
-                vel turpis fringilla ante gravida vestibulum. Etiam a
-                sollicitudin leo. Nunc metus lectus, lacinia ut arcu quis,
-                pretium congue lacus.
-              </p>
-              <p>
-                Aliquam blandit varius metus, in mattis orci convallis sit amet.
-                Fusce et sem ac velit placerat ultrices in id dolor. Sed eget
-                auctor metus. Sed suscipit fringilla lectus, a maximus justo
-                bibendum a. Donec et pellentesque nisl, vitae tempus lorem. Sed
-                efficitur cursus rhoncus. Duis placerat nisi quis mi tincidunt,
-                sit amet tincidunt urna convallis. Nam et sagittis felis.
-                Pellentesque placerat orci sodales nisi convallis ultrices. Nunc
-                posuere neque eu mi imperdiet ullamcorper. Praesent tempor
-                convallis rutrum. Vestibulum dignissim pellentesque eros in
-                placerat. Etiam at nisi quis quam sollicitudin vehicula sit amet
-                vel mi.
-              </p>
-            </div>
-          </div> -->
-          </div>
+          <!-- Generated with JS-->
         </div>
 
         <div class="container">
