--- a/about-us.html
+++ b/about-us.html
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+    <div id="loader">
+      <div class="spinner"></div>
+    </div>
     <header>
       <div class="container">
         <nav>
@@ -37,8 +40,8 @@
           <div class="menu">
             <ul>
               <li><a href="./index.html">Home</a></li>
-              <li><a href="#projects">Projects</a></li>
-              <li><a href="#services">Services</a></li>
+              <li><a href="index.html#projects">Projects</a></li>
+              <li><a href="index.html#services">Services</a></li>
               <li><a href="./about-us.html">About</a></li>
             </ul>
           </div>
@@ -107,6 +110,11 @@
         </div>
       </div>
     </footer>
+
+    <!-- SCROLL -->
+    <button id="scrollToTopBtn" class="scroll-to-top-btn" title="Scroll to Top">
+      Scroll to Top ↑
+    </button>
 
     <script type="module" src="./resources/js/about.js"></script>
   </body>
