--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   </head>
 
   <body>
+    <!-- LOADER -->
+    <div id="loader">
+      <div class="spinner"></div>
+    </div>
+    
     <header>
       <div class="container">
         <nav>
@@ -348,6 +353,11 @@
         </div>
       </div>
     </footer>
+
+     <!-- SCROLL -->
+    <button id="scrollToTopBtn" class="scroll-to-top-btn" title="Scroll to Top">
+      Scroll to Top ↑
+    </button>
 
     <!-- JQUERY -->
     <script
