--- a/project.html
+++ b/project.html
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+    <div id="loader">
+      <div class="spinner"></div>
+    </div>
     <header>
       <div class="container">
         <nav>
@@ -38,7 +41,7 @@
             <ul>
               <li><a href="./index.html">Home</a></li>
               <li><a href="#projects">Projects</a></li>
-              <li><a href="#services">Services</a></li>
+              <li><a href="index.html#services">Services</a></li>
               <li><a href="./about-us.html">About</a></li>
             </ul>
           </div>
@@ -62,7 +65,7 @@
             <div class="project">
               <img
                 src="resources/images/projects-section/1.jpg"
-                alt="Project Imagen"
+                alt="Project Image"
               />
 
               <div class="text-project">
@@ -75,7 +78,7 @@
             <div class="project">
               <img
                 src="resources/images/projects-section/2.jpg"
-                alt="Project Imagen"
+                alt="Project Image"
               />
               <div class="text-project">
                 <h3>Dashcoin</h3>
@@ -87,7 +90,7 @@
             <div class="project">
               <img
                 src="resources/images/projects-section/3.jpg"
-                alt="Project Imagen"
+                alt="Project Image"
               />
               <div class="text-project">
                 <h3>Vectorify</h3>
@@ -133,6 +136,12 @@
         </div>
       </div>
     </footer>
+
+    <!-- SCROLL -->
+    <button id="scrollToTopBtn" class="scroll-to-top-btn" title="Scroll to Top">
+      Scroll to Top ↑
+    </button>
+    
     <script type="module" src="./resources/js/project.js"></script>
   </body>
 </html>
