--- a/about-us.html
+++ b/about-us.html
@@ -58,19 +58,34 @@
         <div class="container">
           <h1>About us</h1>
           <div class="about-persons-container">
-            <div id="profile1" class="about-person">
-              <h2>John Doe</h2>
-              <img
-                src="./resources/images/about/profile1.jpg"
-                alt="Profile 1"
-              />
-            </div>
-            <div id="profile2" class="about-person">
-              <h2>Olivia Doe</h2>
-              <img
-                src="./resources/images/about/profile2.jpg"
-                alt="Profile 1"
-              />
+            <div class="profile-container">
+              <div class="profile">
+                <h2>Nico D'Alessandro</h2>
+                <img
+                  src="./resources/images/about/profile1.jpg"
+                  alt="Profile 1"
+                />
+              </div>
+
+              <div class="profile-text">
+                <h2>Nico D'Alessandro</h2>
+                <p>
+                  Mi nombre es <span>Nico D'Alessandro</span> y soy el
+                  “desarrollador” detrás de este primer proyecto web.
+                </p>
+                <p>
+                  Actualmente me desempeño como
+                  <span>Business Analyst</span> para el departamento de CO en
+                  Amazon.
+                </p>
+                <p>
+                  Si bien tengo amplia experiencia utilizando herramientas para
+                  análisis de datos tales como
+                  <span>SQL, Python y Tableau</span>, en la búsqueda de nuevas
+                  oportunidades para expandir mis habilidades he decidido
+                  realizar este bootcamp sobre desarrollo de Frontend Web
+                </p>
+              </div>
             </div>
           </div>
         </div>
